--- a/login.html
+++ b/login.html
@@ -68,36 +68,129 @@
     opacity: 0.9;
   }
 
-  nav {
-    background: rgba(44, 62, 80, 0.95);
-    backdrop-filter: blur(10px);
-    padding: 1rem 0;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  /* Modern Top Nav & Drawer */
+  .topnav {
+    background: rgba(44, 62, 80, 0.97);
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.08);
   }
-
-  nav ul {
-    list-style: none;
+  .nav-container {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 2rem;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0.5rem 1.5rem;
   }
-
-  nav a {
-    color: white;
+  .brand {
+    color: #fff;
+    font-size: 1.3rem;
+    font-weight: bold;
+    text-decoration: none;
+    letter-spacing: 1px;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  .nav-links {
+    display: flex;
+    gap: 1.5rem;
+    list-style: none;
+    align-items: center;
+  }
+  .nav-links li a {
+    color: #fff;
     text-decoration: none;
     padding: 0.5rem 1rem;
     border-radius: 25px;
-    transition: all 0.3s ease;
+    transition: background 0.2s;
     font-weight: 500;
     display: flex;
     align-items: center;
     gap: 0.5rem;
   }
-
-  nav a:hover {
+  .nav-links li a:hover {
     background: rgba(52, 152, 219, 0.8);
-    transform: translateY(-2px);
+  }
+  .nav-toggle {
+    display: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    margin-left: 1rem;
+  }
+  .hamburger {
+    width: 28px;
+    height: 3px;
+    background: #fff;
+    display: block;
+    position: relative;
+    border-radius: 2px;
+  }
+  .hamburger::before, .hamburger::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 28px;
+    height: 3px;
+    background: #fff;
+    border-radius: 2px;
+    transition: 0.3s;
+  }
+  .hamburger::before { top: -9px; }
+  .hamburger::after { top: 9px; }
+  /* Drawer */
+  .drawer {
+    position: fixed;
+    top: 0; left: -260px;
+    width: 240px;
+    height: 100vh;
+    background: #222b3a;
+    box-shadow: 2px 0 20px rgba(0,0,0,0.15);
+    z-index: 200;
+    transition: left 0.3s;
+    padding-top: 2.5rem;
+    display: flex;
+    flex-direction: column;
+  }
+  .drawer.open { left: 0; }
+  .drawer ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .drawer ul li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 1rem 2rem;
+    border-radius: 0 25px 25px 0;
+    font-size: 1.1rem;
+    display: block;
+    transition: background 0.2s;
+  }
+  .drawer ul li a:hover {
+    background: #3498db;
+  }
+  .drawer-backdrop {
+    display: none;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100vw; height: 100vh;
+    background: rgba(0,0,0,0.25);
+    z-index: 150;
+  }
+  .drawer.open ~ .drawer-backdrop {
+    display: block;
+  }
+  @media (max-width: 900px) {
+    .nav-links { display: none; }
+    .nav-toggle { display: block; }
   }
 
   .main-content {
@@ -430,16 +523,35 @@
     <p>Your Trusted Partner in Quality Products & Exceptional Service</p>
   </header>
 
-  <nav>
-    <ul>
-      <li><a href="home.html">🏠 Home</a></li>
-      <li><a href="about.html">ℹ️ About</a></li>
-      <li><a href="product.html">📦 Products</a></li>
-      <li><a href="service.html">🛠️ Services</a></li>
-      <li><a href="gallery.html">🖼️ Gallery</a></li>
-      <li><a href="register.html">📝 Register</a></li>
-      <li><a href="payment.html">💳 Payment</a></li>
-    </ul>
+  <!-- Modern Top Nav with Hamburger Drawer -->
+  <nav class="topnav">
+    <div class="nav-container">
+      <a href="home.html" class="brand">🏪 Mayokun Stores</a>
+      <button class="nav-toggle" aria-label="Open menu" onclick="toggleDrawer()">
+        <span class="hamburger"></span>
+      </button>
+      <ul class="nav-links">
+        <li><a href="home.html">🏠 Home</a></li>
+        <li><a href="about.html">ℹ️ About</a></li>
+        <li><a href="product.html">📦 Products</a></li>
+        <li><a href="service.html">🛠️ Services</a></li>
+        <li><a href="gallery.html">🖼️ Gallery</a></li>
+        <li><a href="register.html">📝 Register</a></li>
+        <li><a href="payment.html">💳 Payment</a></li>
+      </ul>
+    </div>
+    <div class="drawer" id="drawerMenu">
+      <ul>
+        <li><a href="home.html">🏠 Home</a></li>
+        <li><a href="about.html">ℹ️ About</a></li>
+        <li><a href="product.html">📦 Products</a></li>
+        <li><a href="service.html">🛠️ Services</a></li>
+        <li><a href="gallery.html">🖼️ Gallery</a></li>
+        <li><a href="register.html">📝 Register</a></li>
+        <li><a href="payment.html">💳 Payment</a></li>
+      </ul>
+    </div>
+    <div class="drawer-backdrop" id="drawerBackdrop" onclick="toggleDrawer()"></div>
   </nav>
 
   <div class="main-content">
@@ -588,6 +700,20 @@
       submitBtn.disabled = false;
     }
   });
+
+  // Drawer menu toggle
+  function toggleDrawer() {
+    const drawer = document.getElementById('drawerMenu');
+    const backdrop = document.getElementById('drawerBackdrop');
+    const isOpen = drawer.classList.contains('open');
+    if (isOpen) {
+      drawer.classList.remove('open');
+      backdrop.style.display = 'none';
+    } else {
+      drawer.classList.add('open');
+      backdrop.style.display = 'block';
+    }
+  }
 </script>
 </body>
 </html>
